增加一些功能

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,11 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
+
+    //解决Duplicate files copied in APK META-INF/library_release.kotlin_module的问题
+    packagingOptions {
+        exclude 'META-INF/library_release.kotlin_module'
+    }
 }
 
 dependencies {
@@ -41,4 +46,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation project(path: ':library')
+
+    api 'com.github.lygttpod:SuperTextView:2.4.2'
+    api 'com.flyco.tablayout.androidx:FlycoTabLayout_Lib:1.0.0'
+    api 'com.joooonho:selectableroundedimageview:1.0.1'
 }
