--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.liuhc.mvplight">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -11,7 +12,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/LibraryTheme">
+        android:theme="@style/LibraryTheme"
+        tools:ignore="AllowBackup">
         <!--今日头条屏幕适配-->
         <meta-data
             android:name="design_width_in_dp"
@@ -20,9 +22,7 @@
             android:name="design_height_in_dp"
             android:value="640" />
 
-        <activity android:name=".MainActivity"
-            android:launchMode="singleTask"/>
-        <activity android:name=".module.user.activity.LoginActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
