--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Oct 15 18:14:31 CST 2020
-sdk.dir=/Users/liuhc/Library/Android/sdk
+#Mon Oct 19 14:34:07 CST 2020
+sdk.dir=D\:\\sdk
