现在协程被取消后如果有dialog在显示则可以正常的被取消了. 以前只有block()执行完成和出现异常的时候才取消dialog的显示,如果网络请求被取消则不能正常的取消dialog

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             android:value="640" />
 
         <activity
-            android:name=".module.user.activity.LoginActivity"
+            android:name=".MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,9 +31,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MainActivity"
-            android:screenOrientation="portrait" />
+<!--        <activity-->
+<!--            android:name=".MainActivity"-->
+<!--            android:screenOrientation="portrait" />-->
     </application>
 
 </manifest>
