--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     package="com.liuhc.mvplight">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <!-- ObjectBox电脑浏览数据库必备权限，保持持久连接的权限 -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application
         android:name=".App"
